--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,18 +35,14 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka:29092
       
-  mongo-database:
+  mongo:
     image: mongo
-    container_name: my_mongodb
-    environment: 
-      MONGO_INITDB_ROOT_USERNAME: root 
-      MONGO_INITDB_ROOT_PASSWORD: root 
-      MONGO_INITDB_DATABASE: productDB
-    volumes:
-      - ./init-mongo.js/:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - ./data/mongodb:/data/db
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
     ports:
-      - 27017:27017
+      - "27017:27017"    
 
 networks: 
   broker-kafka:
