--- a/product-to-kafka/src/main/resources/application.properties
+++ b/product-to-kafka/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# Producer properties
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+topic.name.producer=product
