--- a/product-kafka-to-mongodb/src/main/resources/application.properties
+++ b/product-kafka-to-mongodb/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.group-id=group-id
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 
+topic.name=product
