salvando no banco MongoDB

--- a/product-kafka-to-mongodb/src/main/resources/application.properties
+++ b/product-kafka-to-mongodb/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 topic.name=product
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017
+spring.data.mongodb.database=productDB
+spring.data.mongodb.authentication-database=admin
